# smiles-embedding-quality

./: .gitignore  AGENTS.md  FAILURE_MODES.md  README.md  block2_real.py  block2_singlecell.py  pyproject.toml
simcse-reproduction/: README.md  main.py  pyproject.toml
simcse-reproduction/configs/: baseline.yaml
simcse-reproduction/results/: bert_pretrained_stsb.json  lr_extended_glue_log.txt  lr_extended_log.txt  sweep_log.txt  training_baseline.json  wd_sweep_log.txt  wd_sweep_multiseed_log.txt
simcse-reproduction/results/lr_extended/: RESULTS.md  lr0.0001_seed42.json  lr0.0001_seed42_training.json  lr0.0002_seed42.json  lr0.0002_seed42_training.json  lr0.0003_seed42.json  lr0.0003_seed42_training.json  lr0.0005_seed42.json  lr0.0005_seed42_training.json  lr0.0007_seed42.json  lr0.0007_seed42_training.json  lr0.001_seed42.json  lr0.001_seed42_training.json  lr1e-05_seed42.json  lr1e-05_seed42_training.json  lr3e-05_seed42.json  lr3e-05_seed42_training.json  lr5e-05_seed42.json  lr5e-05_seed42_training.json  lr7e-05_seed42.json  lr7e-05_seed42_training.json  lr_sweep_raw.json  lr_sweep_summary.json
simcse-reproduction/results/lr_extended_glue/: glue_sweep_raw.json  lr0.0001_seed42.json  lr0.0002_seed42.json  lr0.0003_seed42.json  lr0.0005_seed42.json  lr0.0007_seed42.json  lr0.001_seed42.json  lr1e-05_seed42.json  lr3e-05_seed42.json  lr5e-05_seed42.json  lr7e-05_seed42.json
simcse-reproduction/src/: evaluate_glue.py  evaluate_sts.py  generate_embeddings.py  geometric_metrics.py  run_glue_eval.py  run_hparam_sweep.py  run_sweep.py  train_simcse.py
(+245 files in other folders)
