[project]
name = "simcse-reproduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "matplotlib>=3.11.1",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "transformers>=5.14.1",
]
